--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -159,5 +159,6 @@
     <string name="delete_chat">Deletar Conversa</string>
     <string name="delete_chat_msg">Você deseja realmente deletar esta conversa?</string>
     <string name="chat_deleted">Conversa deletada com sucesso!</string>
+    <string name="view_profile">Visitar Perfil</string>
 
 </resources>
