--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -164,7 +164,9 @@
     <string name="cauth_cases">Casos Pegos</string>
     <string name="no_cases">Você não tem nenhum caso registrado ainda</string>
     <string name="leave_case">Deixar Caso</string>
-    <string name="leave_case_msg">Deseja realmente abandorar este caso?\nAo fazer isso você não podera ter mais contato com o usuario pelo nosso aplicativo, sua conversa com este usuario sera apagada!\nOs creditos gastos também não serão reembolsados.</string>
+    <string name="leave_case_msg">Deseja realmente abandorar este caso? Ao fazer isso você não podera ter mais contato com o usuario pelo nosso aplicativo, sua conversa com este usuario sera apagada! Os creditos gastos também não serão reembolsados.</string>
     <string name="leave_case_wait">Deixando o caso, Aguarde!</string>
+    <string name="please_wait">Por favor, Aguarde</string>
+    <string name="saving">Salvando ...</string>
 
 </resources>
