--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -185,5 +185,16 @@
     <string name="neighborhood">Bairro</string>
     <string name="complement">Complemento</string>
     <string name="my_profile">Meu Perfil</string>
+    <string name="data_saved">Dados salvos com sucesso!</string>
+    <string name="fill_cpf">Digite seu CPF</string>
+    <string name="fill_date">Digite sua data de nascimento</string>
+    <string name="fill_ddd">Digite o DDD de seu número</string>
+    <string name="fill_phone_user">Digite o número de seu telefone</string>
+    <string name="fill_cep">Digite o CEP de sua cidade</string>
+    <string name="fill_city">Digite o nome de sua cidade</string>
+    <string name="select_uf">Selecione o Estado (UF)</string>
+    <string name="fill_address">Digite o seu endereço</string>
+    <string name="fill_neighborhood">Digite o nome de seu bairro</string>
+    <string name="fill_number">Digite o número de sua casa</string>
 
 </resources>
