--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -190,7 +190,7 @@
     <string name="fill_address">Enter your address</string>
     <string name="fill_neighborhood">Enter the name of your neighborhood</string>
     <string name="fill_number">Enter your home number</string>
-    <string name="mini_curriculum">Mini curriculum</string>
+    <string name="mini_curriculum">Mini Curriculum</string>
     <string name="mini_curriculum_msg">Describe your professional and academic experience</string>
     <string name="profissional_data">Professional Data</string>
     <string name="oab_register">OAB Registration</string>
