--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -196,7 +196,7 @@
     <string name="fill_address">Digite o seu endereço</string>
     <string name="fill_neighborhood">Digite o nome de seu bairro</string>
     <string name="fill_number">Digite o número de sua casa</string>
-    <string name="mini_curriculum">Mini currículo</string>
+    <string name="mini_curriculum">Mini Currículo</string>
     <string name="mini_curriculum_msg">Descreva sua experiência profissional e acadêmica</string>
     <string name="profissional_data">Dados Profissionais</string>
     <string name="oab_register">Registro OAB</string>
