--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -215,5 +215,7 @@
     <string name="no_data_curriculum">Sem dados no seu mini currículo</string>
     <string name="complete_profile_lawyer">Você precisa completar o seu perfil para ir a procura de casos</string>
     <string name="complete_profile_user">Você precisa completar o seu perfil para criar um novo caso</string>
+    <string name="edit_case">Editar Caso</string>
+    <string name="_delete_case">Excluir Caso</string>
 
 </resources>
